<resources>
    <string name="app_name">QuizApp</string>
    <string name="header_text">“Humankind has not woven the web of life. \nWe are but one thread within it. \nWhatever we do to the web, we do to ourselves. \nAll things are bound together … all things connect.”</string>
    <string name="chief">Chief Seattle</string>
    <string name="question_no">Question:\u0020</string>
    <string name="drawable">drawable/</string>
    <string name="yes">Yes! This is the correct answer:\u0020</string>
    <string name="no">No! The answer is:&#160;</string>
    <string name="quiz">Environmental Quiz</string>
    <string name="please">Please enter your name:</string>
    <string name="greenb">green energy button</string>
    <string name="pollutionb">pollution button</string>
    <string name="namewarning">Please enter your name before filling the quiz.</string>
    <string name="namefield">nameField</string>
    <string name="quiz_picture">Quiz rotating picture</string>
    <string name="correct_sign">Correct sign</string>
    <string name="wrong_sign">Wrong sign</string>
    <string name="correct">Correct answer!</string>
    <string name="wrong">Wrong answer!</string>
    <string name="next">Next button</string>
    <string name="submit">Submit button</string>
    <string name="reset">Reset button</string>
    <string name="congratulations">, Congratulations!</string>
    <string name="ok">OK</string>
    <string name="message1">You managed to gain:&#160;&lt;br>&lt;br></string>
    <string name="message2">&#160;&lt;b>points out of 10.&lt;/b>&lt;br>&lt;br></string>
    <string name="message3">That\'s not the best result.&lt;br></string>
    <string name="message4">However the quiz was really hard&lt;br></string>
    <string name="message5">and you really did your best!&lt;br>&lt;br></string>
    <string name="message6">Good news is that you can start &lt;br>the quiz again.&lt;br>&lt;br></string>
    <string name="message7">You can also start the pollution quiz.&lt;br>&lt;br></string>
    <string name="message8">Just press the reset button&lt;br> at the bottom of the page.&lt;br></string>
    <string name="message9">That\'s a very good result!&lt;br></string>
    <string name="message10">as the quiz was really hard.&lt;br></string>
    <string name="message11">You did it really well!&lt;br>&lt;br></string>
    <string name="message12">You can still start the quiz again,&lt;br></string>
    <string name="message13">or start the pollution quiz.&lt;br>&lt;br></string>
    <string name="green_energy_quiz">Green energy quiz</string>
    <string name="pollution_quiz">Pollution quiz</string>
    <string name="youranswer">your answer:</string>
    <string name="prize">prize</string>
    <string name="title">title</string>
    <string name="message">message</string>
    <string name="hint">hint</string>

    <string name="green_q1">The earliest known use of wind power, except the sailboat, was in China and Middle East and is dating back to:</string>
    <string name="green_q1_1">200 B.C.</string>
    <string name="green_q1_2">1000 B.C.</string>
    <string name="green_q1_3">2500 B.C.</string>
    <string name="green_q1_4">500 A.D.</string>
    <string name="green_q2">What is the average wind speed needed for a standard wind turbine to generate electricity?</string>
    <string name="green_q2_1">7.2 km/h (4.48 mph)</string>
    <string name="green_q2_2">23 km/h (14.29 mph)</string>
    <string name="green_q2_3">90 km/h (55.92 mph)</string>
    <string name="green_q2_4">150 km/h (93.20 mph)</string>
    <string name="green_q3">The photovoltaic effect was first observed by French physicist A. E. Becquerel in:</string>
    <string name="green_q3_1">1912</string>
    <string name="green_q3_2">1839</string>
    <string name="green_q3_3">1814</string>
    <string name="green_q3_4">1746</string>
    <string name="green_q4">Albert Einstein won the Nobel Prize in 1921 for his experiments with:</string>
    <string name="green_q4_1">Solar power and photovoltaics</string>
    <string name="green_q4_2">Diffraction of X-rays by crystals</string>
    <string name="green_q4_3">Theory of relativity</string>
    <string name="green_q4_4">Structure of atoms</string>
    <string name="green_q5">Silicon from just one ton of sand, used in photovoltaic cells, could produce as much electricity as burning:</string>
    <string name="green_q5_1">100,000 tons of garbage</string>
    <string name="green_q5_2">1000,000 tons of coal</string>
    <string name="green_q5_3">200,000 tons of wood</string>
    <string name="green_q5_4">500,000 tons of coal</string>
    <string name="green_q6">The first geothermal power plant opened in California in:</string>
    <string name="green_q6_1">1912</string>
    <string name="green_q6_2">1948</string>
    <string name="green_q6_3">1921</string>
    <string name="green_q6_4">1897</string>
    <string name="green_q7">What percentage of the world-wide power is generated from hydropower?</string>
    <string name="green_q7_1">5%</string>
    <string name="green_q7_2">30%</string>
    <string name="green_q7_3">16%</string>
    <string name="green_q7_4">3%</string>
    <string name="green_q8">Penn State University researchers have produced a human waste-powered generator. It can produce 51 kilowatts of energy from the waste of:</string>
    <string name="green_q8_1">1000 people</string>
    <string name="green_q8_2">20000 people</string>
    <string name="green_q8_3">50000 people</string>
    <string name="green_q8_4">100000 people</string>
    <string name="green_q9">The largest biomass power station in the world in Finland has a nameplate capacity of:</string>
    <string name="green_q9_1">265 MW</string>
    <string name="green_q9_2">50 MW</string>
    <string name="green_q9_3">500 MW</string>
    <string name="green_q9_4">10000 MW</string>
    <string name="green_q10">The Sun delivers more energy to Earth in an hour than we use in a:</string>
    <string name="green_q10_1">week</string>
    <string name="green_q10_2">month</string>
    <string name="green_q10_3">year</string>
    <string name="green_q10_4">quarter</string>

    <string name="pollution_q1">How many people worldwide don\'t have access to clean water?</string>
    <string name="pollution_q1_1">1.2 billion</string>
    <string name="pollution_q1_2">100 million</string>
    <string name="pollution_q1_3">500 million</string>
    <string name="pollution_q1_4">3 billion</string>
    <string name="pollution_q2">What percentage of the lakes in America are extremely polluted and hence risky for swimming, fishing and aquatic life? </string>
    <string name="pollution_q2_1">30%</string>
    <string name="pollution_q2_2">45%</string>
    <string name="pollution_q2_3">15%</string>
    <string name="pollution_q2_4">75%</string>
    <string name="pollution_q3">A single car generates half a ton of CO2 and a NASA space shuttle releases:</string>
    <string name="pollution_q3_1">100 tons</string>
    <string name="pollution_q3_2">50 tons</string>
    <string name="pollution_q3_3">28 tons</string>
    <string name="pollution_q3_4">15 tons</string>
    <string name="pollution_q4">Americans buy more than 29 million bottles of water every year. What’s the percentage of these bottles being recycled?:</string>
    <string name="pollution_q4_1">50%</string>
    <string name="pollution_q4_2">75%</string>
    <string name="pollution_q4_3">30%</string>
    <string name="pollution_q4_4">13%</string>
    <string name="pollution_q5">How many tons of trash are dumped into the ocean every year?</string>
    <string name="pollution_q5_1">19 million</string>
    <string name="pollution_q5_2">100 million</string>
    <string name="pollution_q5_3">50 million</string>
    <string name="pollution_q5_4">8 million</string>
    <string name="pollution_q6">How many major disasters occurred in the entire history of nuclear energy production?</string>
    <string name="pollution_q6_1">10</string>
    <string name="pollution_q6_2">5</string>
    <string name="pollution_q6_3">3</string>
    <string name="pollution_q6_4">1</string>
    <string name="pollution_q7">When was the Chernobyl disaster?</string>
    <string name="pollution_q7_1">1986</string>
    <string name="pollution_q7_2">1978</string>
    <string name="pollution_q7_3">1989</string>
    <string name="pollution_q7_4">1991</string>
    <string name="pollution_q8">Approximately how many litres of air do we breathe in every day?</string>
    <string name="pollution_q8_1">5000 – 7000</string>
    <string name="pollution_q8_2">30000 – 35000</string>
    <string name="pollution_q8_3">2500 – 3000</string>
    <string name="pollution_q8_4">10000 – 15000</string>
    <string name="pollution_q9">What’s the percentage of people living in places where air pollution exceeds safe limits?</string>
    <string name="pollution_q9_1">50%</string>
    <string name="pollution_q9_2">36%</string>
    <string name="pollution_q9_3">92%</string>
    <string name="pollution_q9_4">78%</string>
    <string name="pollution_q10">How long does it take a usual plastic bottle to biodegrade?</string>
    <string name="pollution_q10_1">500 years</string>
    <string name="pollution_q10_2">200 years</string>
    <string name="pollution_q10_3">2000 years</string>
    <string name="pollution_q10_4">5000 years</string>
</resources>
