<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/earth6"
    android:fillViewport="true">

    <RelativeLayout
        style="@style/main_layout_welcome"
        tools:context="com.example.android.quizapp.MainActivity">

        <TextView
            android:id="@+id/header_text"
            style="@style/motto"
            android:layout_marginEnd="@dimen/standard"
            android:layout_marginStart="@dimen/standard"
            android:layout_marginTop="@dimen/standard"
            android:text="@string/header_text"
            android:textSize="@dimen/motto_portrait" />

        <TextView
            android:id="@+id/chief"
            style="@style/chief"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/header_text"
            android:layout_marginEnd="@dimen/standard"
            android:layout_marginTop="@dimen/half"
            android:text="@string/chief"
            android:textSize="@dimen/motto_portrait" />

        <TextView
            android:id="@+id/quiz_name"
            style="@style/quiz_portrait"
            android:layout_below="@id/chief"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/double_standard"
            android:text="@string/quiz"
            android:textSize="@dimen/slogan" />

        <EditText
            android:id="@+id/name_field"
            style="@style/edit_text"
            android:layout_below="@id/quiz_name"
            android:layout_margin="@dimen/standard"
            android:background="@drawable/edit_text"
            android:hint="@string/please"
            android:inputType="textCapWords"
            android:padding="@dimen/quarter" />

        <LinearLayout
            android:id="@+id/linear1"
            style="@style/container_buttons_layout_front"
            android:layout_below="@id/name_field"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:layout_marginBottom="@dimen/standard"
            android:layout_marginEnd="@dimen/standard"
            android:layout_marginStart="@dimen/standard"
            android:baselineAligned="false">

            <LinearLayout
                style="@style/container_buttons_layout_cell"
                android:layout_width="@dimen/zero"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/green_button"
                    style="@style/wrap_wrap"
                    android:background="@drawable/rounded_buttons"
                    android:contentDescription="@string/greenb"
                    android:onClick="green_energy_quiz"
                    android:src="@drawable/green_button" />

                <TextView
                    style="@style/container_buttons_text"
                    android:layout_marginTop="@dimen/quarter"
                    android:background="@drawable/rounded_buttons"
                    android:text="@string/green_energy_quiz" />

            </LinearLayout>

            <LinearLayout
                style="@style/container_buttons_layout_cell"
                android:layout_width="@dimen/zero"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/pollution_button"
                    style="@style/wrap_wrap"
                    android:background="@drawable/rounded_buttons"
                    android:contentDescription="@string/pollutionb"
                    android:onClick="pollution_quiz"
                    android:src="@drawable/pollution_button" />

                <TextView
                    style="@style/container_buttons_text"
                    android:layout_marginTop="@dimen/quarter"
                    android:background="@drawable/rounded_buttons"
                    android:text="@string/pollution_quiz" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>